# AuCamPRO

./: .gitignore  progress_summary.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/buffer/: SpscRingBuffer.h
app/src/main/cpp/common/: Log.h  Result.h  TripleBuffer.h
app/src/main/cpp/dsp/: BiquadEq.cpp  BiquadEq.h  HighPassFilter.cpp  HighPassFilter.h  InputGain.cpp  InputGain.h  MakeupGain.cpp  MakeupGain.h  PeakRmsMeter.cpp  PeakRmsMeter.h  SafetyLimiter.cpp  SafetyLimiter.h
app/src/main/cpp/engine/: OboeFullDuplexEngine.cpp  OboeFullDuplexEngine.h
app/src/main/cpp/jni/: native-lib.cpp
app/src/main/cpp/test/: CMakeLists.txt  test_biquad.cpp  test_input_gain.cpp  test_peak_rms_meter.cpp  test_result.cpp  test_ring_buffer.cpp  test_safety_limiter.cpp  test_triple_buffer.cpp
app/src/main/java/com/aucampro/recorder/: AuCamPROApplication.kt
app/src/main/java/com/aucampro/recorder/audio/: AudioDeviceRouter.kt  AudioQuality.kt  NativeEngineBridge.kt
app/src/main/java/com/aucampro/recorder/camera/: CameraCapabilityInspector.kt  CameraParams.kt  CameraSessionController.kt  CameraSessionMetrics.kt  CaptureRangeClamper.kt  ExposureMode.kt  ManualCaptureRequestFactory.kt
app/src/main/java/com/aucampro/recorder/encoder/: AudioEncoder.kt  Decimator.kt  HiResAudioSink.kt  VideoEncoder.kt  WavFileWriter.kt
app/src/main/java/com/aucampro/recorder/muxer/: PtsClockDomain.kt
app/src/main/java/com/aucampro/recorder/pipeline/: RecordingPipeline.kt
app/src/main/java/com/aucampro/recorder/ui/: MainScreen.kt
app/src/main/java/com/aucampro/recorder/utils/: UserPreferencesStore.kt
app/src/main/java/com/procamera/recorder/audio/: AudioDeviceRouter.kt  NativeEngineBridge.kt
app/src/main/java/com/procamera/recorder/camera/: CameraCapabilityInspector.kt  CameraSessionController.kt  ColorTemperatureConverter.kt  ManualCaptureRequestFactory.kt
app/src/main/java/com/procamera/recorder/encoder/: AudioEncoder.kt  VideoEncoder.kt
app/src/main/java/com/procamera/recorder/muxer/: PtsClockDomain.kt  SegmentedMuxerController.kt
app/src/main/java/com/procamera/recorder/pipeline/: RecordingPipeline.kt
app/src/main/java/com/procamera/recorder/ui/: MainActivity.kt  MainScreen.kt
app/src/main/java/com/procamera/recorder/utils/: UserPreferencesStore.kt
app/src/test/java/com/aucampro/recorder/camera/: CaptureRangeClamperTest.kt
app/src/test/java/com/aucampro/recorder/encoder/: DecimatorTest.kt
app/src/test/java/com/procamera/recorder/camera/: ColorTemperatureConverterTest.kt
app/src/test/java/com/procamera/recorder/muxer/: PtsClockDomainTest.kt
docs/: ARCHITECTURE.md  CAMERA_SESSION_LATENCY_2026-07-21.md  HIRES_AUDIO_DESIGN.md  PERF_INVESTIGATION_2026-07-17.md  PERF_REINVESTIGATION_2026-07-17.md  PERSISTENT_ENCODER_SURFACE_DESIGN_2026-07-21.md  VIDEO_FPS_STUTTER_INVESTIGATION_2026-07-20.md
rec_diagnose_out/: report.json
tools/: rec_diagnose.py
(+10 files in other folders)
